--- a/paths.env
+++ b/paths.env
@@ -1,3 +1,3 @@
 [paths]
-DFM_path = '/u/hoch/programmes/DFLOWFM/lib/libdflowfm.so'
-LFP_path = '/nfs/home4/hoch/GLOFRIM2/glofrim/lisflood-bmi-v5.9/liblisflood.so'
+DFM_path = /u/hoch/programmes/DFLOWFM/lib/libdflowfm.so
+LFP_path = /nfs/home4/hoch/GLOFRIM2/glofrim/lisflood-bmi-v5.9/liblisflood.so
